# landsat_dl

./: README.md  pyproject.toml  requirements.txt  setup.py
integration_tests/: test_cli.py
landsat_dl/: api.py  cli.py  earthexplorer.py  tempCodeRunnerFile.py  util.py
landsat_dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
